# reference-seal-backend

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  quickstart_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml  install-requirements.sh  klocwork.yml  setup-code-for-kw_seal-backend.sh  validate_testharness_output.sh
cmake/utils/: import-library.cmake
include/benchmarks/bfv/: seal_bfv_dot_product_benchmark.h  seal_bfv_element_wise_benchmark.h  seal_bfv_matmult_cipherbatchaxis_benchmark.h  seal_bfv_matmult_row_benchmark.h  seal_bfv_matmultval_benchmark.h
include/benchmarks/ckks/: seal_ckks_dot_product_benchmark.h  seal_ckks_element_wise_benchmark.h  seal_ckks_logreg_horner.h  seal_ckks_matmult_cipherbatchaxis_benchmark.h  seal_ckks_matmult_row_benchmark.h  seal_ckks_matmultval_benchmark.h
include/engine/: seal_context.h  seal_engine.h  seal_types.h  seal_version.h.in
src/benchmarks/bfv/: seal_bfv_dot_product_benchmark.cpp  seal_bfv_element_wise_benchmark.cpp  seal_bfv_matmult_cipherbatchaxis_benchmark.cpp  seal_bfv_matmult_row_benchmark.cpp  seal_bfv_matmultval_benchmark.cpp
src/benchmarks/ckks/: seal_ckks_dot_product_benchmark.cpp  seal_ckks_element_wise_benchmark.cpp  seal_ckks_logreg_horner.cpp  seal_ckks_matmult_cipherbatchaxis_benchmark.cpp  seal_ckks_matmult_row_benchmark.cpp  seal_ckks_matmultval_benchmark.cpp
src/engine/: seal_context.cpp  seal_engine.cpp
